# game-mechanic-generator

./: .gitignore  README.md  progress.md  pyproject.toml  vercel.json
api/: index.py
procedural_mechanic_generator/: __init__.py  balancing.py  cli.py  config.py  error_handling.py  generation.py  input_layer.py  logging_utils.py  models.py  novelty.py  output.py  rationale.py  service.py  simulation.py  utils.py  validation.py
public/: index.html
tests/: test_generator.py
