[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procedural-mechanic-generator"
version = "2.0.0"
description = "Production-ready procedural game mechanic generator with validation, simulation, novelty analysis, and UE5 export support."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
mechanic-generator = "procedural_mechanic_generator.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
